--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-node_modules/
+# --- Next.js standard ---
+node_modules
+.next
 .env.local
-.next/
-out/
-.DS_Store
-*.log
+.env.development.local
+.env.test.local
+.env.production.local
 .vercel
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
