--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-# --- Next.js standard ---
-node_modules
+# Next.js
 .next
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.vercel
+node_modules
+
+# env
+.env*
+!.env.example
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+.vercel
