--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,19 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+
+# Vercel
 .vercel
+
+# OS
+.DS_Store
+*.tsbuildinfo
+
+# IDE
+.vscode
+.idea
+
+# Build outputs
+out/
+build/
+dist/
