--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^2.4.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.263.1",
     "next": "^14.0.0",
     "openai": "^4.104.0",
