--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
     {
       "path": "/api/daily-picks/publish",
       "schedule": "0 16 * * *"
+    },
+    {
+      "path": "/api/daily-picks/grade-bets",
+      "schedule": "0 */6 * * *"
     }
   ],
   "functions": {
